<?xml version="1.0"?>
<package>
  <name>rocon_rosjava_msgs</name>
  <version>0.2.2</version>
  <description>
    Java Message generation for rocon
  </description>
  <maintainer email="jihoonlee.in@gmail.com">Jihoon Lee</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosjava_build_tools</build_depend>
  <build_depend>genjava</build_depend>
  <build_depend>rosjava_messages</build_depend>
  <build_depend>concert_msgs</build_depend>
  <build_depend>concert_service_msgs</build_depend>
  <build_depend>concert_workflow_engine_msgs</build_depend>
  <build_depend>gateway_msgs</build_depend>
  <build_depend>rocon_app_manager_msgs</build_depend>
  <build_depend>rocon_device_msgs</build_depend>
  <build_depend>rocon_interaction_msgs</build_depend>
  <build_depend>rocon_service_pair_msgs</build_depend>
  <build_depend>rocon_std_msgs</build_depend>
  <build_depend>rocon_tutorial_msgs</build_depend>
  <build_depend>scheduler_msgs</build_depend>
  <build_depend>cafe_msgs</build_depend>
  <build_depend>rocon_demo_msgs</build_depend>
  <build_depend>room_checker_msgs</build_depend>
  <build_depend>simple_delivery_msgs</build_depend>
  <build_depend>simple_media_msgs</build_depend>
  <build_depend>vending_machine_msgs</build_depend>
  <build_depend>waiterbot_msgs</build_depend>
  
  <run_depend>rosjava_build_tools</run_depend>
  <run_depend>genjava</run_depend>
</package>
